# x-particle

./: .env.example  .gitignore  README.md  ecosystem.config.js  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
agent/: agent.py
agents/: main_agent.py  system_prompt.py
config/: environments.py  tavily.py
llm/: grok.py  groq.py
metatrader/: account_info.py  common.py  current_orders.py  get_account_info_mt.py  historical_orders.py  market_data.py  metatrader.py  order_execution.py  orders.py
tools/: account_tools.py  get_account_info.py  get_current_orders.py  get_historical_orders.py  market_data_tools.py  metatrader_tools.py  orders_tools.py  tavily.py  tavily_web_search.py  tavily_web_search_tool.py  tools.py
