[project]
name = "x-particle"
version = "0.1.0"
description = "x-particle is super efficient AI forex trading bot."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.1.3",
    "langchain-groq>=1.1.0",
    "langgraph>=1.0.4",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.14",
]